--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Demo project</title>
 </head>
 <body>
- Labas rytas, Lietuva! 🟨🟩🟥  
+    <p>Labas rytas, Lietuva!</p>
+    <p>🟨🟩🟥</p>
 </body>
 </html>
